--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.flywaydb:flyway-core'
+//	implementation 'org.flywaydb:flyway-core'
+	implementation("org.flywaydb:flyway-database-postgresql")
+
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.3'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
